// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't ignore node_modules with --with-node-modules flag  1`] = `
{
  "stderr": "",
  "stdout": "nested/node_modules/node-module.js
node_modules/node-module.js
not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`doesn't ignore node_modules with --with-node-modules flag for file list  1`] = `
{
  "stderr": "",
  "stdout": "node_modules/node-module.js
not_node_modules/file.js
nested/node_modules/node-module.js
regular-module.js",
  "write": [],
}
`;

exports[`ignores node_modules by default  1`] = `
{
  "stderr": "",
  "stdout": "not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`ignores node_modules by default for file list  1`] = `
{
  "stderr": "",
  "stdout": "not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;

exports[`ignores node_modules by with ./**/*.js  1`] = `
{
  "stderr": "",
  "stdout": "not_node_modules/file.js
regular-module.js",
  "write": [],
}
`;
